--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
-    "name": "guerrilla/laravel-request-filters",
+    "name": "andrey-vasin/laravel-request-filters",
     "description": "Simple & lean request filtering for Laravel 5.6+",
     "type": "library",
     "keywords": ["laravel", "filter", "request", "sanitize", "formrequest", "trait", "api", "rest", "utility"],
-    "homepage": "https://github.com/guerrillacontra/laravel-request-filters",
+    "homepage": "https://github.com/andrey-vasin/laravel-request-filters",
     "require": {
-        "illuminate/support": "5.6 - ^9.0",
-        "illuminate/contracts": "5.6 - ^9.0",
+        "illuminate/support": "*",
+        "illuminate/contracts": "*",
         "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "6 - ^9.0"
+        "phpunit/phpunit": "*"
     },
     "autoload": {
         "psr-4": {
-            "Guerrilla\\RequestFilters\\": "src/"
+            "AndreyVasin\\RequestFilters\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Guerrilla\\Tests\\": "test/"
+            "AndreyVasin\\Tests\\": "test/"
         }
     },
     "config": {
